# asl

./: .bazelrc  .clang-tidy  .clangd  .gitignore  BUILD.bazel  LICENSE.txt  MODULE.bazel  README.md  asl.todo.txt  refresh_clangd.bat  refresh_clangd.sh  todo.txt
.forgejo/workflows/: publish-to-bazel-registry.yml
asl/: BUILD.bazel  allocator.cpp  allocator.hpp  annotations.hpp  assert.cpp  assert.hpp  atomic.hpp  box.hpp  buffer.hpp  config.hpp  float.hpp  format.cpp  format.hpp  format_float.cpp  format_tests.cpp  functional.hpp  hash.hpp  hash_cityhash.cpp  hash_map.hpp  hash_set.hpp  integers.hpp  integers_tests.cpp  io.hpp  layout.hpp  maybe_uninit.hpp  maybe_uninit_tests.cpp  memory.hpp  meta.hpp  meta_tests.cpp  object.hpp  object_tests.cpp  option.hpp  option_tests.cpp  print.cpp  print.hpp  print_win32.cpp  ptr.hpp  ptr_tests.cpp  span.hpp  status.cpp  (+8 more)
asl/base/: BUILD.bazel  annotations.hpp  assert.cpp  assert.hpp  bit.hpp  bit_tests.cpp  config.hpp  defer.hpp  defer_tests.cpp  float.hpp  float_tests.cpp  functional.hpp  functional_tests.cpp  integers.hpp  integers_tests.cpp  meta.hpp  meta_tests.cpp  numeric.hpp  numeric_tests.cpp  utility.hpp  utility_tests.cpp
asl/containers/: BUILD.bazel  buffer.hpp  buffer_tests.cpp  chunked_buffer.hpp  chunked_buffer_tests.cpp  hash_map.hpp  hash_map_tests.cpp  hash_set.hpp  hash_set_tests.cpp  intrusive_list.hpp  intrusive_list_tests.cpp
asl/formatting/: BUILD.bazel  format.cpp  format.hpp  format_float.cpp  format_tests.cpp
asl/handle_pool/: BUILD.bazel  dense_handle_pool.hpp  index_pool.hpp  index_pool_tests.cpp
asl/hashing/: BUILD.bazel  hash.hpp  hash_cityhash.cpp  hash_tests.cpp
asl/io/: BUILD.bazel  print.cpp  print.hpp  writer.hpp
asl/log/: BUILD.bazel  log.cpp  log.hpp  log_tests.cpp
asl/logging/: BUILD.bazel  logging.cpp  logging.hpp  logging_tests.cpp
asl/memory/: BUILD.bazel  allocator.cpp  allocator.hpp  layout.hpp  memory.hpp
asl/meta/: BUILD.bazel  empty.hpp  empty_tests.cpp  funcs.hpp  funcs_tests.cpp  quals.hpp  quals_tests.cpp  refs.hpp  refs_tests.cpp  types.hpp  types_tests.cpp
asl/meta/internal/: quals.hpp  refs.hpp  types.hpp
asl/strings/: BUILD.bazel  parse_number.cpp  parse_number.hpp  parse_number_float.cpp  parse_number_tests.cpp  string.hpp  string_builder.hpp  string_builder_tests.cpp  string_tests.cpp  string_view.hpp  string_view_tests.cpp
asl/synchronization/: BUILD.bazel  atomic.hpp
asl/testing/: BUILD.bazel  testing.cpp  testing.hpp
asl/tests/: BUILD.bazel  box_tests.cpp  buffer_tests.cpp  counting_allocator.hpp  float_tests.cpp  format_tests.cpp  functional_tests.cpp  hash_map_tests.cpp  hash_set_tests.cpp  hash_tests.cpp  integers_tests.cpp  maybe_uninit_tests.cpp  meta_tests.cpp  option_tests.cpp  span_tests.cpp  status_or_tests.cpp  status_tests.cpp  string_builder_tests.cpp  string_tests.cpp  string_view_tests.cpp  test_types.hpp  types.hpp  utility_tests.cpp
asl/types/: BUILD.bazel  array.hpp  array_tests.cpp  box.hpp  box_tests.cpp  function.hpp  function_ref.hpp  function_ref_tests.cpp  function_tests.cpp  maybe_uninit.hpp  maybe_uninit_tests.cpp  option.hpp  option_tests.cpp  span.hpp  span_tests.cpp  status.cpp  status.hpp  status_or.hpp  status_or_tests.cpp  status_tests.cpp
bazel/clang_toolchain/: BUILD.bazel  clang_config.bzl.tpl  clang_toolchain.BUILD.bazel  config_detection.bzl  extensions.bzl  toolchain_config.bzl
bazel/clang_toolchain/args/archive/: BUILD.bazel
bazel/clang_toolchain/args/compilation_mode/: BUILD.bazel
bazel/clang_toolchain/args/compile/: BUILD.bazel
bazel/clang_toolchain/args/link/: BUILD.bazel
bazel/clang_toolchain/args/sanitizer/: BUILD.bazel
src/asl/allocator/: BUILD.bazel  allocator.cpp  allocator.hpp
src/asl/base/: BUILD.bazel  assert.cpp  assert.hpp  bit.hpp  bit_tests.cpp  bits.hpp  bits_tests.cpp  byte.hpp  byte_tests.cpp  config.hpp  defer.hpp  defer_tests.cpp  float.hpp  float_tests.cpp  floats.hpp  floats_tests.cpp  functional.hpp  integers.hpp  integers_tests.cpp  layout.hpp  memory.hpp  memory_ops.hpp  memory_tests.cpp  meta.hpp  meta_tests.cpp  numeric.hpp  numeric_tests.cpp  support.hpp  support_tests.cpp  utility_tests.cpp
src/asl/base_old/: BUILD.bazel  assert.cpp  numeric.hpp  numeric_tests.cpp  utility.hpp
src/asl/containers/: BUILD.bazel  buffer.hpp  buffer_tests.cpp  chunked_buffer.hpp  chunked_buffer_tests.cpp  hash_map.hpp  hash_set.hpp  intrusive_list.hpp
src/asl/formatting/: BUILD.bazel  format.cpp  format.hpp  format_float.cpp  format_tests.cpp
src/asl/handle_pool/: BUILD.bazel  dense_handle_pool.hpp  dense_handle_pool_tests.cpp  index_pool.hpp  index_pool_tests.cpp  sparse_handle_pool.hpp  sparse_handle_pool_tests.cpp
src/asl/hashing/: BUILD.bazel  hash.hpp  hash_cityhash.cpp  hash_tests.cpp
src/asl/io/: BUILD.bazel  print.cpp  writer.hpp
src/asl/logging/: BUILD.bazel  logging.cpp  logging.hpp  logging_tests.cpp
src/asl/memory/: BUILD.bazel  allocator.cpp  allocator.hpp  layout.hpp
src/asl/strings/: BUILD.bazel  parse_number.cpp  parse_number.hpp  parse_number_integer_table.py  string.hpp  string_builder.hpp  string_builder_tests.cpp  string_tests.cpp  string_view.hpp  string_view_tests.cpp
src/asl/synchronization/: BUILD.bazel  atomic.hpp
src/asl/testing/: BUILD.bazel  testing.cpp  testing.hpp
src/asl/tests/: BUILD.bazel  counting_allocator.hpp  types.hpp
src/asl/types/: BUILD.bazel  array.hpp  array_tests.cpp  box.hpp  box_tests.cpp  function.hpp  function_ref.hpp  function_tests.cpp  maybe_uninit.hpp  maybe_uninit_tests.cpp  option.hpp  option_tests.cpp  span.hpp  span_tests.cpp  status.cpp  status.hpp  status_or.hpp  status_or_tests.cpp
tools/: BUILD.bazel  fix_line_endings.py  refresh_clangd.sh
tools/fix_line_endings/: BUILD.bazel  fix_line_endings.py
tools/generate_clangd_compilation_database/: BUILD.bazel  generate_clangd_compilation_database.py
tools/refresh_clangd/: BUILD.bazel
