load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_clangd",
    targets = "//...",
)

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        # @Todo(bazel) Bit weird to use a private thing.
        # We used to use @bazel_tools//tools/cpp:clang-cl but it's deprecated
        # in favor of... this?...
        "@rules_cc//cc/private/toolchain:clang-cl",
    ],
)
