# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_license//rules:license.bzl", "license")

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:BSD-3-Clause",
    ],
    license_text = "LICENSE.txt",
    package_name = "ASL",
)

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        # @Todo(bazel) Bit weird to use a private thing.
        # We used to use @bazel_tools//tools/cpp:clang-cl but it's deprecated
        # in favor of... this?...
        "@rules_cc//cc/private/toolchain:clang-cl",
    ],
)
