# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

module(name = "asl", version = "0.5.2")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_license", version = "1.0.0")

bazel_dep(name = "rules_cc", version = "0.2.2")
git_override(
    module_name = "rules_cc",
    remote = "https://github.com/stevenlr/rules_cc",
    commit = "abe0d10d754637ee913a4cff9be0c1468515a8f8",
)

bazel_dep(name = "rules_python", version = "1.3.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13", is_default = True)

clang_info = use_extension("//bazel/clang_toolchain:extensions.bzl", "host_clang_info")
use_repo(clang_info, "clang_info")

register_toolchains("//bazel/clang_toolchain")

