cc_library(
    name = "asl",
    hdrs = [
        "annotations.hpp",
        "assert.hpp",
        "config.hpp",
        "format.hpp",
        "functional.hpp",
        "integers.hpp",
        "io.hpp",
        "layout.hpp",
        "maybe_uninit.hpp",
        "memory.hpp",
        "meta.hpp",
        "option.hpp",
        "print.hpp",
        "span.hpp",
        "utility.hpp",
    ],
    srcs = [
        "format.cpp",
        "print.cpp",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "tests/%s_tests.cpp" % name,
        "tests/test_types.hpp",
    ],
    deps = [
        ":asl",
        "//asl/testing",
    ],
) for name in [
    "format",
    "functional",
    "integers",
    "maybe_uninit",
    "meta",
    "option",
    "span",
    "utility",
]]
