cc_library(
    name = "asl",
    hdrs = [
        "allocator.hpp",
        "annotations.hpp",
        "assert.hpp",
        "box.hpp",
        "config.hpp",
        "float.hpp",
        "format.hpp",
        "functional.hpp",
        "integers.hpp",
        "io.hpp",
        "layout.hpp",
        "maybe_uninit.hpp",
        "memory.hpp",
        "meta.hpp",
        "option.hpp",
        "print.hpp",
        "span.hpp",
        "string_view.hpp",
        "utility.hpp",
    ],
    srcs = [
        "allocator.cpp",
        "format.cpp",
        "format_float.cpp",
        "print.cpp",
    ],
    deps = [
        "//vendor/dragonbox",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "tests/%s_tests.cpp" % name,
        "tests/test_types.hpp",
    ],
    deps = [
        ":asl",
        "//asl/testing",
    ],
) for name in [
    "box",
    "float",
    "format",
    "functional",
    "integers",
    "maybe_uninit",
    "meta",
    "option",
    "span",
    "string_view",
    "utility",
]]
