# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "base",
    hdrs = [
        "annotations.hpp",
        "assert.hpp",
        "bit.hpp",
        "config.hpp",
        "defer.hpp",
        "float.hpp",
        "functional.hpp",
        "integers.hpp",
        "meta.hpp",
        "numeric.hpp",
        "utility.hpp",
    ],
    srcs = [
        "assert.cpp",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "%s_tests.cpp" % name,
    ],
    deps = [
        ":base",
        "//asl/tests:utils",
        "//asl/testing",
        "//asl/types:box",
    ],
) for name in [
    "bit",
    "defer",
    "float",
    "functional",
    "integers",
    "meta",
    "numeric",
    "utility",
]]
