# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "index_pool",
    hdrs = [
        "index_pool.hpp",
    ],
    deps = [
        "//asl/memory",
        "//asl/memory:allocator",
        "//asl/base",
        "//asl/containers:chunked_buffer",
        "//asl/types:option",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dense_handle_pool",
    hdrs = [
        "dense_handle_pool.hpp",
    ],
    deps = [
        ":index_pool",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "index_pool_tests",
    srcs = [
        "index_pool_tests.cpp",
    ],
    deps = [
        ":index_pool",
        "//asl/hashing",
        "//asl/tests:utils",
        "//asl/testing",
    ],
)

cc_test(
    name = "dense_handle_pool_tests",
    srcs = [
        "dense_handle_pool_tests.cpp",
    ],
    deps = [
        ":dense_handle_pool",
        "//asl/tests:utils",
        "//asl/testing",
    ],
)
