# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

cc_library(
    name = "hashing",
    hdrs = [
        "hash.hpp",
    ],
    srcs = [
        "hash_cityhash.cpp",
    ],
    deps = [
        "//asl/base",
        "//asl/types:span",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    srcs = [
        "hash_tests.cpp",
    ],
    deps = [
        "//asl/base",
        "//asl/tests:utils",
        "//asl/testing",
        ":hashing",
        "//asl/strings:string_view",
        "//asl/strings:string",
        "//asl/containers:buffer",
        "//asl/types:box",
        "//asl/types:option",
        "//asl/types:status",
    ],
)
