cc_library(
    name = "writer",
    hdrs = [
        "writer.hpp",
    ],
    deps = [
        "//asl/base",
        "//asl/types:span",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "print",
    hdrs = [
        "print.hpp",
    ],
    srcs = [
        "print.cpp",
    ],
    deps = [
        "//asl/formatting",
        ":writer",
    ],
    visibility = ["//visibility:public"],
)
