cc_library(
    name = "log",
    srcs = [
        "log.cpp",
    ],
    hdrs = [
        "log.hpp",
    ],
    deps = [
        "//asl",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    srcs = [
        "log_tests.cpp"
    ],
    deps = [
        ":log",
        "//asl/testing",
    ],
    visibility = ["//visibility:public"],
)

