# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "logging",
    srcs = [
        "logging.cpp",
    ],
    hdrs = [
        "logging.hpp",
    ],
    deps = [
        "//asl/base",
        "//asl/containers:intrusive_list",
        "//asl/formatting",
        "//asl/io:print",
        "//asl/strings:string_builder",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    srcs = [
        "logging_tests.cpp"
    ],
    deps = [
        ":logging",
        "//asl/testing",
    ],
    visibility = ["//visibility:public"],
)

