# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

cc_library(
    name = "memory",
    hdrs = [
        "allocator.hpp",
        "layout.hpp",
        "memory.hpp",
    ],
    srcs = [
        "allocator.cpp",
    ],
    deps = [
        "//asl/base",
    ],
    visibility = ["//visibility:public"],
)

