# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "memory",
    hdrs = [
        "layout.hpp",
        "memory.hpp",
    ],
    deps = [
        "//asl/base",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "allocator",
    hdrs = [
        "allocator.hpp",
    ],
    srcs = [
        "allocator.cpp",
    ],
    deps = [
        "//asl/base",
        "//asl/memory",
    ],
    visibility = ["//visibility:public"],
)

