cc_library(
    name = "meta",
    hdrs = [
        "empty.hpp",
        "funcs.hpp",
        "quals.hpp",
        "refs.hpp",
        "types.hpp",
    ],
    srcs = [
        "internal/quals.hpp",
        "internal/refs.hpp",
        "internal/types.hpp",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "%s_tests.cpp" % name,
    ],
    deps = [
        ":meta",
    ],
) for name in ["empty", "quals", "refs", "types", "funcs"]]

