# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "string_view",
    hdrs = [
        "string_view.hpp",
    ],
    deps = [
        "//asl/base",
        "//asl/memory",
        "//asl/types:span",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "string",
    hdrs = [
        "string.hpp",
    ],
    deps = [
        "//asl/containers:buffer",
        ":string_view",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "string_builder",
    hdrs = [
        "string_builder.hpp",
    ],
    deps = [
        "//asl/containers:buffer",
        "//asl/formatting",
        ":string",
        "//asl/io:writer",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parse_number",
    hdrs = [
        "parse_number.hpp",
    ],
    srcs = [
        "parse_number_float.cpp",
        "parse_number.cpp",
    ],
    deps = [
        "//asl/base",
        "//asl/types:status",
        ":string_view",
        "//vendor/fast_float",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "%s_tests.cpp" % name,
    ],
    deps = [
        ":string",
        ":string_builder",
        ":string_view",
        ":parse_number",
        "//asl/tests:utils",
        "//asl/testing",
    ],
) for name in [
    "string",
    "string_view",
    "string_builder",
    "parse_number",
]]
