# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

cc_library(
    name = "testing",
    hdrs = [
        "testing.hpp",
    ],
    srcs = [
        "testing.cpp",
    ],
    deps = [
        "//asl/base",
        "//asl/formatting",
        "//asl/io:print",
    ],
    visibility = ["//visibility:public"],
)
