# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "utils",
    hdrs = [
        "types.hpp",
    ],
    deps = [
        "//asl/base",
    ],
    visibility = ["//asl:__subpackages__"],
)
