# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_python//python:py_binary.bzl", "py_binary")

package(
    default_applicable_licenses = ["//:license"],
)

py_binary(
    name = "fix_line_endings",
    srcs = [
        "fix_line_endings.py",
    ],
    visibility = ["//visibility:public"],
)
