# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "allocator",
    hdrs = [
        "allocator.hpp",
    ],
    strip_include_prefix = "/src",
    srcs = [
        "allocator.cpp",
    ],
    deps = [
        "//src/asl/base",
    ],
    visibility = ["//visibility:public"],
)

