# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "base",
    hdrs = [
        "assert.hpp",
        "bits.hpp",
        "byte.hpp",
        "config.hpp",
        "defer.hpp",
        "floats.hpp",
        "integers.hpp",
        "layout.hpp",
        "memory.hpp",
        "memory_ops.hpp",
        "meta.hpp",
        "numeric.hpp",
        "support.hpp",
    ],
    strip_include_prefix = "/src",
    srcs = [
        "assert.cpp",
    ],
    defines = select({
        "//src/asl:debug": ["ASL_DEBUG=1"],
        "//conditions:default": ["ASL_DEBUG=0"],
    }) + select({
        "//src/asl:optimized": ["ASL_OPTIMIZED=1"],
        "//conditions:default": ["ASL_OPTIMIZED=0"],
    }),
    visibility = ["//visibility:public"],
)

[
    cc_test(
        name = "{}_test".format(name),
        srcs = [
            "{}_tests.cpp".format(name),
        ],
        deps = [
            ":base",
        ],
    ) for name in [
        "byte",
        "floats",
        "integers",
        "memory",
        "meta",
        "support",
    ]
]

[
    cc_test(
        name = "{}_test".format(name),
        srcs = [
            "{}_tests.cpp".format(name),
        ],
        deps = [
            ":base",
            "//src/asl/testing",
        ],
    ) for name in [
        "bits",
        "defer",
        "numeric",
    ]
]
