# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "base",
    hdrs = [
        "annotations.hpp",
        "assert.hpp",
        "bit.hpp",
        "config.hpp",
        "defer.hpp",
        "float.hpp",
        "functional.hpp",
        "integers.hpp",
        "meta.hpp",
        "numeric.hpp",
        "utility.hpp",
    ],
    strip_include_prefix = "/src",
    srcs = [
        "assert.cpp",
    ],
    defines = select({
        "//src/asl:debug": ["ASL_DEBUG=1"],
        "//conditions:default": ["ASL_DEBUG=0"],
    }) + select({
        "//src/asl:optimized": ["ASL_OPTIMIZED=1"],
        "//conditions:default": ["ASL_OPTIMIZED=0"],
    }),
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "%s_tests.cpp" % name,
    ],
    deps = [
        ":base",
        "//src/asl/tests:utils",
        "//src/asl/testing",
        "//src/asl/types:box",
    ],
) for name in [
    "bit",
    "defer",
    "float",
    "functional",
    "integers",
    "meta",
    "numeric",
    "utility",
]]
